changes' is much more useful than 'misc edits' or 'code cleanup'.
3) Please include your name with the changes you make.
4) Whenever making an update, please update this file, no matter how
small - this just lets others know that the file has changed if nothing
else.  With this, include the file(s) that you changed.
------------------------------------------------------------------------------

server/plugins.c, server/server.c: Run closePlugin() in the various plugins at
  server shutdown. Previously it was only run when the wiz command plugout was
  used. This change is needed to properly close the sqlite database handles in
  cflogger and cfnewspaper.
include/sproto.h: Run make proto in server/ to include the newly added
  cleanupPlugins() in server/plugins.c. This caused some other changes, such as
  reordering and adding some other functions.
Arvid Norlander 2009-01-21

server/plugins.c: Fix broken error checking in plugin loading code.
Arvid Norlander 2009-01-21

common/readable.c: Fix a rare bug that caused the use of an uninitialised
  variable in god_info_msg() for gods denies summoning (such as valkyrie).
Arvid Norlander 2009-01-21

doc/Developers/objects, lib/artifacts: Remove obsolete fields color_fg and
 color_bg.
lib/adm/map_info: Remove support for color_fg/color_bg fields.
Andreas Kirschbaum 2008-12-12

server/login.c: Clear shootype value when player leaves game - otherwise
   it will point to bad value in ranges[] array.
MSW 2008-11-25

lib/collect.pl.in: Prepend an underscore to names generated for implicitly
 defined animations.
Andreas Kirschbaum 2008-11-23

Rewrite SockList handling to not malloc/free buffers but use stack
 space instead. Encapsulate most accesses to SockList instances into
 lowlevel.c.
Andreas Kirschbaum 2008-11-21

common/treasure.c: Do not call tailor_readable_ob() with invalid msgtype
 parameter.
common/readable.c: Detect and report errors when saving bookarch file.