@@ -14,6 +14,12 @@ small - this just lets others know that the file has changed if nothing
 else.  With this, include the file(s) that you changed.
 ------------------------------------------------------------------------------
 
+server/plugins.c: Remove forgotten debug output.
+plugins/cflogger/cflogger.c, plugins/cfnewspaper/cfnewspaper.c: Add missing
+  newline in log output.
+plugins/cfnewspaper/cfnewspaper.c: Close the second sqlite database as well.
+Arvid Norlander 2009-01-21
+
 server/plugins.c, server/server.c: Run closePlugin() in the various plugins at
   server shutdown. Previously it was only run when the wiz command plugout was
   used. This change is needed to properly close the sqlite database handles in
